# kerbcast

./: .gitignore  CLAUDE.md  Kerbcam.ckan  Kerbcast.ckan  KerbcastKos.ckan  LICENSE  README.md  cliff.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.githooks/: pre-push
.github/workflows/: build-hullcam-shaders.yml  build-kerbcam-shaders.yml  build-kerbcast-shaders.yml  fx-previews.yml  native-readback-ci.yml  plugin-ci.yml  prepare-release.yml  protocol-ci.yml  publish-protocol.yml  release.yml  sidecar-ci.yml  web-ci.yml
GameData/Kerbcam/: Kerbcam.version
GameData/Kerbcam/HullcamShaders/: shaders.linux
GameData/Kerbcast/: Kerbcast-TUFX-Profile.cfg  Kerbcast.version
GameData/Kerbcast/HullcamShaders/: LICENSE.md
GameData/KerbcastKos/: KerbcastKos.version  README.md
Plugin/: Kerbcam.csproj  Kerbcast.csproj  settings.cfg
Plugin/AdaptiveQualityController.Tests/: AdaptiveQualityController.Tests.csproj  Program.cs
Plugin/AimSourceRegistry.Tests/: AimSourceRegistry.Tests.csproj  Program.cs
Plugin/CameraId.Tests/: CameraId.Tests.csproj  Program.cs
Plugin/ControlBlock.Tests/: ControlBlock.Tests.csproj  Program.cs
Plugin/HullcamContract.Tests/: HullcamContract.Tests.csproj  Program.cs
Plugin/IntegrationPolicy.Tests/: IntegrationPolicy.Tests.csproj  Program.cs
Plugin/Kerbcam/: AdaptiveQualityController.cs  ControlBlock.cs  HullcamShaderBundleSwap.cs  KerbcamCamera.cs  KerbcamCore.cs  KerbcamGameParameters.cs  KerbcamNightVisionFilter.cs  KerbcamSettings.cs  KerbcamSidecarHost.cs  MmapFrameRing.cs  PartCapabilities.cs  PhaseTimings.cs  QualityClamp.cs  QualityTier.cs  ReadbackScheduler.cs  ReadbackTargetTracker.cs  RenderSizeKey.cs  SettingsLayer.cs  ShedController.cs  SidecarLifecycle.cs  StaggerBudgetController.cs  TUFXIntegration.cs
Plugin/Kerbcam/Fx/: AtmoFx.cs  BowshockEffect.cs  CoreSheathEffect.cs  EmbersEffect.cs  FxHost.cs  KerbcamFxAssets.cs  TrailEffect.cs  WindwardProfile.cs
Plugin/Kerbcam/HullcamBlit/: HullcamFilterBlit.cs
Plugin/Kerbcam/TUFXProfiles/: kerbcam.cfg
Plugin/Kerbcast/: AdaptiveQualityController.cs  AsyncReadbackRegistryFix.cs  CameraId.cs  CaptureCore.cs  ControlBlock.cs  CrewProvider.cs  HullcamMountSource.cs  HullcamPanCapability.cs  HullcamProvider.cs  HullcamShaderBundleSwap.cs  HullcamZoomCapability.cs  ICamera.cs  ICameraMountSource.cs  ICameraSourceProvider.cs  KerbalFaceCamera.cs  KerbcastCamera.cs  KerbcastControl.cs  KerbcastCore.cs  KerbcastGameParameters.cs  KerbcastNightVisionFilter.cs  KerbcastSettings.cs  KerbcastSidecarHost.cs  MmapFrameRing.cs  PartCapabilities.cs  PhaseTimings.cs  QualityClamp.cs  QualityTier.cs  ReadbackScheduler.cs  ReadbackTargetTracker.cs  RenderSizeKey.cs  ScaledSunLightHelper.cs  SettingsLayer.cs  ShedController.cs  SidecarLifecycle.cs  StaggerBudgetController.cs  TUFXIntegration.cs  TrackAim.cs  VesselChangePolicy.cs
Plugin/Kerbcast/Fx/: AtmoFx.cs  BowshockEffect.cs  CoreSheathEffect.cs  EmbersEffect.cs  FireflyCaptureEffect.cs  FxHost.cs  KerbcastFxAssets.cs  TrailEffect.cs  WindwardProfile.cs
Plugin/Kerbcast/HullcamBlit/: HullcamFilterBlit.cs
Plugin/Kerbcast/Integrations/: ComponentClone.cs  DeferredIntegration.cs  EVEIntegration.cs  ICameraModIntegration.cs  IntegrationHost.cs  IntegrationPolicy.cs  ParallaxIntegration.cs  ParallaxScatterDrive.cs  ScattererCameraSwap.cs  ScattererFlareProbe.cs  ScattererIntegration.cs  (+2 more)
Plugin/KerbcastKos/: AimSourceRegistry.cs  IKerbcastControl.cs  KerbcastAddon.cs  KerbcastCameraStruct.cs  KerbcastKos.csproj  KerbcastKosPump.cs  KosCameraView.cs  NOTICE-KOS.txt  RealKerbcastControl.cs  UserDelegateAimLease.cs
Plugin/KerbcastKos.Tests/: FakeKerbcastControl.cs  KerbcastAddonTests.cs
Plugin/MmapFrameRing.Tests/: MmapFrameRing.Tests.csproj  Program.cs
Plugin/PhaseTimings.Tests/: PhaseTimings.Tests.csproj  Program.cs
Plugin/QualityClamp.Tests/: Program.cs  QualityClamp.Tests.csproj
Plugin/QualityTier.Tests/: Program.cs  QualityTier.Tests.csproj
Plugin/ReadbackScheduler.Tests/: Program.cs  ReadbackScheduler.Tests.csproj
Plugin/ReadbackTargetTracker.Tests/: Program.cs  ReadbackTargetTracker.Tests.csproj
Plugin/RenderSizeKey.Tests/: Program.cs  RenderSizeKey.Tests.csproj
Plugin/SettingsLayer.Tests/: Program.cs  SettingsLayer.Tests.csproj
Plugin/ShedController.Tests/: Program.cs  ShedController.Tests.csproj
Plugin/SidecarLifecycle.Tests/: Program.cs  SidecarLifecycle.Tests.csproj
Plugin/StaggerBudgetController.Tests/: Program.cs  StaggerBudgetController.Tests.csproj
Plugin/TrackAim.Tests/: Program.cs
Plugin/VesselChangePolicy.Tests/: Program.cs  VesselChangePolicy.Tests.csproj
ci/hullcam-shaders/: BuildShaderBundle.cs
client-sdk/react/: CHANGELOG.md  README.md  package.json  tsconfig.json  vitest.config.ts
client-sdk/typescript/: CHANGELOG.md  PUBLISHING.md  README.md  package.json  pnpm-lock.yaml  tsconfig.json  vitest.config.ts
docs/: INSTALL.md  TROUBLESHOOTING.md  simplify-review-2026-06.md  testing-backlog.md
live_tests/: kerbcam.md  kerbcast-kos.md  kerbcast.md
live_tests/cards/: eve.md  parallax.md  scatterer.md
scripts/: bump-version.sh  ci-check.sh
sidecar/: Cargo.toml  README.md  build.rs
sidecar/examples/: fake_camera.rs  webrtc_peer.html  webrtc_peer.rs
sidecar/src/: cameras.rs  heartbeat.rs  lib.rs  main.rs  signalling.rs  signalling_index.html
sidecar/src/encoder/: ffi_shim.c  libva.rs  mediafoundation.rs  mod.rs  software.rs
sidecar/src/protocol/: mod.rs
sidecar/src/shared_mem/: control.rs  mmap.rs
sidecar/src/webrtc/: mod.rs  peer.rs
sidecar/tests/: mmap_ring_to_encoder.rs  synthetic_frame_pipeline.rs
tests/manual/: ksp_smoke.md
web/: .gitignore  README.md  index.html  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
web/src/: App.test.tsx  App.tsx  CrewBar.test.tsx  CrewBar.tsx  DevPanel.tsx  ErrorToast.tsx  Grid.tsx  Header.tsx  SettingsPanel.tsx  ShedBanner.tsx  StandbyOverlay.tsx  Tile.test.tsx  Tile.tsx  bestGrid.test.ts  bestGrid.ts  connectionManager.test.ts  connectionManager.ts  main.tsx  settings.ts  styles.css  tiles.test.ts  tiles.ts
(+63 files in other folders)
