[package]
name = "kerbcam-sidecar"
version = "0.3.1"
edition = "2021"
description = "kerbcam KSP camera-streaming sidecar (per-OS hardware encode + WebRTC)"
license = "MIT OR Apache-2.0"
publish = false
default-run = "kerbcam-sidecar"

[lib]
name = "kerbcam_sidecar"
path = "src/lib.rs"

[[bin]]
name = "kerbcam-sidecar"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "sync", "time"] }
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
clap = { version = "4", features = ["derive"] }

# Software H.264 encoder (Cisco OpenH264). Bundled source — builds the C
# library at compile time, no system libs required. The "source" feature is
# the crate's default; we name it explicitly so a future swap to "libloading"
# (precompiled binary) is a one-line change.
openh264 = { version = "0.9", default-features = false, features = ["source"] }

# File-backed shared memory for the KSP-plugin <-> sidecar frame handoff.
# Plain mmap of a regular file (NOT POSIX shm_open) so the C# side of the
# bridge can use System.IO.MemoryMappedFiles.MemoryMappedFile.CreateFromFile
# with the same path — Mono on Linux's MMF API uses regular files, not
# /dev/shm/, so we have to meet it where it lives.
memmap2 = "0.9"

# Browser-facing transport. Pure-Rust libwebrtc-equivalent: handles ICE,
# DTLS, SRTP, RTP packetisation, and the SDP offer/answer dance. Heavy dep
# tree (~200 transitive crates) but it's the load-bearing piece for the
# rebuild's "stream to a <video srcObject>" UX. Without this we're back to
# OCISLY's JPEG-over-gRPC architecture which is what we're trying to escape.
webrtc = "0.13"

# HTTP signalling endpoint — POST /offer accepts the browser's SDP, returns
# the sidecar's answer. axum is the lightest tokio-native option that
# handles JSON bodies + static-file serving (for the bundled test page)
# without ceremony. Tower stack is needed for tower-http's ServeDir/cors.
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "fs", "trace"] }
base64 = "0.22"

# Type-export attribute. The `typeshare-cli` tool reads `#[typeshare]`-
# annotated structs/enums and emits TypeScript / Kotlin / Swift / Scala
# bindings — single source of truth for the protocol package. The CLI
# isn't a runtime dep; only the marker attribute crate is.
typeshare = "1"

# Transport deps still deferred:
#   ffmpeg-next            — for the tier-1 libva hardware encode backend on
#                            Steam Deck (currently a stub)

[dev-dependencies]
tokio = { version = "1", features = ["test-util"] }
