[package]
name = "kerbcam-sidecar"
version = "0.12.0"
edition = "2021"
description = "kerbcam KSP camera-streaming sidecar (per-OS hardware encode + WebRTC)"
license = "MIT OR Apache-2.0"
publish = false
default-run = "kerbcam-sidecar"

[lib]
name = "kerbcam_sidecar"
path = "src/lib.rs"

[[bin]]
name = "kerbcam-sidecar"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "sync", "time"] }
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
clap = { version = "4", features = ["derive"] }

# Software H.264 encoder (Cisco OpenH264). Bundled source — builds the C
# library at compile time, no system libs required. The "source" feature is
# the crate's default; we name it explicitly so a future swap to "libloading"
# (precompiled binary) is a one-line change.
openh264 = { version = "0.9", default-features = false, features = ["source"] }

# File-backed shared memory for the KSP-plugin <-> sidecar frame handoff.
# Plain mmap of a regular file (NOT POSIX shm_open) so the C# side of the
# bridge can use System.IO.MemoryMappedFiles.MemoryMappedFile.CreateFromFile
# with the same path — Mono on Linux's MMF API uses regular files, not
# /dev/shm/, so we have to meet it where it lives.
memmap2 = "0.9"

# Browser-facing transport. Pure-Rust libwebrtc-equivalent: handles ICE,
# DTLS, SRTP, RTP packetisation, and the SDP offer/answer dance. Heavy dep
# tree (~200 transitive crates) but it's the load-bearing piece for the
# rebuild's "stream to a <video srcObject>" UX. Without this we're back to
# OCISLY's JPEG-over-gRPC architecture which is what we're trying to escape.
webrtc = "0.13"
ice = { package = "webrtc-ice", version = "0.13" }

# HTTP signalling endpoint — POST /offer accepts the browser's SDP, returns
# the sidecar's answer. axum is the lightest tokio-native option that
# handles JSON bodies + static-file serving (for the bundled test page)
# without ceremony. Tower stack is needed for tower-http's ServeDir/cors.
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "fs", "trace"] }
base64 = "0.22"

# Type-export attribute. The `typeshare-cli` tool reads `#[typeshare]`-
# annotated structs/enums and emits TypeScript / Kotlin / Swift / Scala
# bindings — single source of truth for the protocol package. The CLI
# isn't a runtime dep; only the marker attribute crate is.
typeshare = "1"

[target.'cfg(target_os = "linux")'.dependencies]
# Tier-1 hardware H.264 encode on Linux/Steam Deck via VA-API. ffmpeg-next
# wraps libavcodec and re-exports ffmpeg-sys-next as `ffmpeg::ffi::*`, which
# we need for the VAAPI hwdevice/hwframe context plumbing (the high-level
# wrapper doesn't cover hwaccel surfaces).
#
# Linux-only: macOS dev iteration must not pull in libavcodec system libs.
# CI installs libavcodec-dev + libva-dev + libclang-dev before cargo build.
# `codec` alone fails to compile because ffmpeg-next's codec module imports
# unconditional symbols from its `format` module (AVIOInterruptCB,
# av_read_frame, av_write_frame, etc — surfaced as 9 unresolved imports in
# CI). Adding `format` resolves the chain. We don't strictly need `format`
# at runtime (we're encode-only, no muxing), but ffmpeg-next 8.x doesn't
# offer a feature gate that splits the codec module from format intra-crate.
ffmpeg-next = { version = "8", default-features = false, features = ["codec", "format"] }

[build-dependencies]
# Used by build.rs to compile ffi_shim.c on Linux. The shim provides C-side
# accessors for AVCodecContext fields whose offsets may differ between the
# bindgen-generated Rust layout and the compiled runtime library.
cc = "1"
pkg-config = "0.3"

[dev-dependencies]
tokio = { version = "1", features = ["test-util"] }
tempfile = "3"
